# task-cli-

./:   .gitignore   404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  task.py  test_task.py
.github/workflows/: ci.yml
CONTRIBUTING/: index.html
contact/: index.html
docs/: CONTRIBUTING.md  contact.md  index.md  installation.md  priority.md  status.md  usage.md
installation/: index.html
priority/: index.html
search/: search_index.json
status/: index.html
usage/: index.html
