[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli-umitakahashi723"
version = "1.0.0"
description = "个人任务管理命令行工具"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
task = "task:main"

[tool.setuptools]
py-modules = ["task"]   # ← 只打包 task.py，排除 test_task

